# harmony_sdk

./: .gitmodules  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/utils/: README.md
lib_ffmpeg_utils/: CHANGELOG.md  Index.ets  LICENSE  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
lib_ffmpeg_utils/example/: BasicUsage.ets
lib_ffmpeg_utils/src/main/: module.json5
lib_ffmpeg_utils/src/main/cpp/: CMakeLists.txt  napi_ffmpeg.cpp
lib_ffmpeg_utils/src/main/cpp/ffmpeg/arm64-v8a/include/libavutil/: ffversion.h
lib_ffmpeg_utils/src/main/cpp/fftools/: cmdutils.c  config.h  exception.c  exception.h  ffmpeg.c  ffmpeg.h  ffmpeg_callbacks.h  opt_common.c
lib_ffmpeg_utils/src/main/ets/ffmpeg/: FFMpegUtils.ets  FFmpegCommandBuilder.ets  FFmpegFactory.ets  FFmpegManager.ets  FLog.ets  Task.ets  TaskCallback.ets  TaskConfig.ets  TaskPriority.ets
lib_image_convert/: .gitignore  CHANGELOG.md  Index.ets  README.md  oh-package.json5
lib_image_convert/example/: BasicUsage.ets
lib_image_convert/src/main/: module.json5
lib_image_convert/src/main/ets/converter/: ImageConverter.ets  ImageFactory.ets
lib_image_convert/src/main/ets/types/: ConvertCallback.ets  ConvertOptions.ets  ImageFormat.ets  ImageInfo.ets
lib_image_convert/src/main/ets/utils/: ILog.ets  ImageUtils.ets
lib_image_convert/src/ohosTest/: module.json5
